[metadata]
name = PurpleBot
version = 0.1
description = Mostly simple discord bot
url = http://github.com/kfdm/purplebot/
author = Paul Traylor
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
install_requires =
    arrow
    discord.py
    pytz
    requests
    sentry-sdk
    vobject

[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    purplebot-discord = purplebot.discord:main
